generated/checker-for-evaluation/generated/test-Uninit-Data-eaa03486d932572dfd1c5f64f9dfebe572ad88c0/build_logs/3/build_error_log5.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostStmt(const clang::DeclStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:82:43: error: no matching function for call to ‘clang::DeclRefExpr::Create(clang::ASTContext&, clang::NestedNameSpecifierLoc, clang::DeclarationNameInfo&, const clang::VarDecl*&, bool, clang::QualType, clang::ExprValueKind, clang::SourceLocation)’
   82 |     DeclRefExpr *DRE = DeclRefExpr::Create(C.getASTContext(), NestedNameSpecifierLoc(), DNI, VD,
      |                        ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   83 |                                              /*HadDeclRefExpr=*/false, VD->getType(), VK_LValue, DS->getBeginLoc());
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclCXX.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ExprCXX.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/CFG.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1294:3: note: candidate: ‘static clang::DeclRefExpr* clang::DeclRefExpr::Create(const clang::ASTContext&, clang::NestedNameSpecifierLoc, clang::SourceLocation, clang::ValueDecl*, bool, clang::SourceLocation, clang::QualType, clang::ExprValueKind, clang::NamedDecl*, const clang::TemplateArgumentListInfo*, clang::NonOdrUseReason)’
 1294 |   Create(const ASTContext &Context, NestedNameSpecifierLoc QualifierLoc,
      |   ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1295:25: note:   no known conversion for argument 3 from ‘clang::DeclarationNameInfo’ to ‘clang::SourceLocation’
 1295 |          SourceLocation TemplateKWLoc, ValueDecl *D,
      |          ~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1302:3: note: candidate: ‘static clang::DeclRefExpr* clang::DeclRefExpr::Create(const clang::ASTContext&, clang::NestedNameSpecifierLoc, clang::SourceLocation, clang::ValueDecl*, bool, const clang::DeclarationNameInfo&, clang::QualType, clang::ExprValueKind, clang::NamedDecl*, const clang::TemplateArgumentListInfo*, clang::NonOdrUseReason)’
 1302 |   Create(const ASTContext &Context, NestedNameSpecifierLoc QualifierLoc,
      |   ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1303:25: note:   no known conversion for argument 3 from ‘clang::DeclarationNameInfo’ to ‘clang::SourceLocation’
 1303 |          SourceLocation TemplateKWLoc, ValueDecl *D,
      |          ~~~~~~~~~~~~~~~^~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
